# maeevick.rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  run.sh  tailwind.config.js
.github/workflows/: build_and_test.yml  pipeline.yml
api/src/: main.rs
app/: index.html
app/public/: robots.txt
app/src/: main.rs
public/: sitemap.xml
src/: main.rs
static/: app.js  manifest.json  service-worker.js  sitemap.xml  styles.css
static/html/: error.html  index.html
tailwind/: package.json  tailwind.config.js
